Minor cosmetic enhancements
Update YAML key capitalization, move TODOs out of tracked files, standardize whitespace.

--- a/config/credentials.yml
+++ b/config/credentials.yml
@@ -1,12 +1,11 @@
-# For key, secret, and principalid (lines 5-7), replace all text within the quotes
-# (including brackets) with your personal OCLC WorldCat Metadata API credentials
+# Replace all text within the quotes (including brackets) with your personal
+# OCLC WorldCat Metadata API credentials
 
 credentials:
   key: '{your-key}'
   secret: '{your-secret}'
-  principalid: '{your-principal-id}'
-  # Do not change the values below this line
-  principaldns: 'urn:oclc:wms:da'
+  principalID: '{your-principal-id}'
+  principalDNS: '{your-principal-dns}'
   schema: 'LibraryOfCongress'
-  holdingLibraryCode: 'DRBB'
-  instSymbol: 'DRB'
+  holdingLibraryCode: '{your-holding-library-code}'
+  instSymbol: '{your-institutional-symbol}'
